<resources>
    <string name="app_name">FindGameMoudle</string>
    <string name="new_game">新游</string>
    <string name="invincible">无敌</string>
    <string name="online_game">网游</string>
    <string name="necessary">必备</string>
    <string name="money">赚钱</string>
    <string name="download">下载</string>
    <string name="my_game">我的游戏:玩这里有惊喜</string>
    <string name="more">更多</string>
    <string name="game_box">游戏盒</string>
    <string name="update_apk_detail">新增贴心引导，带你玩转酷炫游戏盒</string>
    <string name="update_edition">2.9.0.980版本</string>
    <string name="update_apk_size">22.6M</string>
    <string name="update">升级</string>
    <string name="over_10000">万+</string>
    <string name="times">次</string>
    <string name="daily_tweet">每日特推</string>
    <string name="date_format">M月d日</string>
    <string name="recently">最近有</string>
    <string name="recommend_people">人推荐</string>
    <string name="date_with_line">MM-dd</string>
    <string name="kind">款</string>
    <string name="over_10000_appointment">万人预约</string>
    <string name="over_appointment">人预约</string>
    <string name="appointment">预约</string>
    <string name="do_like_reason">不喜欢这个游戏是因为：</string>
</resources>
